2010/10/22: Done for day

--- a/tests/pages/element-delegation.html
+++ b/tests/pages/element-delegation.html
@@ -24,7 +24,7 @@
 		<script type="text/javascript">
 		YUITest.Configs.set({
 			tester_type: 'iframe',
-			tester_url_tpt: '{protocol}//{host}/tests/mootools-plus/tester.html'
+			tester_url_tpt: '{protocol}//{host}/tests/mootools-plus/tester.php'
 		});
 		YUITest.Testee.initialize();
 		</script>
