--- a/tests/pages/element.html
+++ b/tests/pages/element.html
@@ -39,7 +39,7 @@
 
 		YUITest.Configs.set({
 			tester_type: 'iframe',
-			tester_url_tpt: '{protocol}//{host}/tests/mootools-plus/tester.html'
+			tester_url_tpt: '{protocol}//{host}/tests/mootools-plus/tester.php'
 		});
 		YUITest.Testee.initialize();
 		</script>
