Bug fixes and updated tests

--- a/tests/pages/layer.html
+++ b/tests/pages/layer.html
@@ -33,6 +33,12 @@
 			<a href="#" class="hide">Click to hide layer</a>
 			<div class="content">Update me.</div>
 		</div>
+		
+		<div id="layer_with_form">
+			<div class="layer_content">
+				<form action="/tests/mootools-plus/responses.php" method="post" class="layer_intercept"></form>
+			</div>
+		</div>
 
 		<div id="logger"></div>
 		<div id="test_cases" style="display: none;">LayerJS</div>
