--- a/tests/pages/layer.html
+++ b/tests/pages/layer.html
@@ -17,7 +17,7 @@
 			width: 400px;
 			z-index: 100;
 		}
-		
+
 		#existing_layer {
 			right: 0;
 			top: 0;
@@ -33,10 +33,10 @@
 			<a href="#" class="hide">Click to hide layer</a>
 			<div class="content">Update me.</div>
 		</div>
-		
+
 		<div id="layer_with_form">
 			<div class="layer_content">
-				<form action="/tests/mootools-plus/responses.php" method="post" class="layer_intercept"></form>
+				<form action="/tests/mootools-plus/responses.php?session_key=layerjs_submit_form" method="post" class="layer_intercept"></form>
 			</div>
 		</div>
 
