Fixed some of the unit tests

--- a/tests/pages/layer.html
+++ b/tests/pages/layer.html
@@ -35,8 +35,8 @@
 		</div>
 
 		<div id="layer_with_form">
-			<div class="layer_content">
-				<form action="/tests/mootools-plus/responses.php?session_key=layerjs_submit_form" method="post" class="layer_intercept"></form>
+			<div class="layer-content">
+				<form action="/tests/mootools-plus/responses.php?session_key=layerjs_submit_form" method="post" class="layer-intercept"></form>
 			</div>
 		</div>
 
