Bug fix with StoragesJS since Engines was missing. Updated some tests

--- a/tests/pages/htmloptions.html
+++ b/tests/pages/htmloptions.html
@@ -18,6 +18,7 @@
 				<div class="double" title="price">15.24</div>
 				<div class="eval" title="callback">asEval</div>
 				<div class="event" title="load">asEvent</div>
+				<div class="html" title="html"><strong>Hi</strong></div>
 			</div>
 		</div>
 		<div id="test_cases" style="display: none;">HtmlOptionsJS</div>
