--- a/tests/pages/non-dom.html
+++ b/tests/pages/non-dom.html
@@ -13,10 +13,11 @@
 		<div id="test_cases" style="display: none;">
 			Array,
 			BindInstances,
-			StaticMutator,
 			Cookie,
 			Function,
 			NamedChainJS,
+			Singleton,
+			StaticMutator,
 			StoredInstances,
 			String
 		</div>
